--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   build:
     runs-on: "ubuntu-latest"
-    container: ubuntu:16.04
+    container: ubuntu:20.04
     steps:
       - run: apt-get update
+      - uses: actions/checkout@v3
+      - uses: ./.github/workflows/a
