--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,3 +26,27 @@ jobs:
         run: |
           python --version
           if python --version | grep "${{ matrix.v }}"; then echo "OK"; else echo "NOK"; exit 1; fi
+
+  inside-container:
+
+    strategy:
+      matrix:
+        v: [3.10.7, 3.8.10, 3.9.14]
+
+    runs-on: ubuntu-latest
+    container:
+      image: cimg/node:14.15.4
+      options: --user root
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.v }}
+
+      - name: Python version check
+        run: |
+          python --version
+          if python --version | grep "${{ matrix.v }}"; then echo "OK"; else echo "NOK"; exit 1; fi
