--- a/.github/workflows/reviewtemplate.yml
+++ b/.github/workflows/reviewtemplate.yml
@@ -34,6 +34,6 @@ jobs:
         run: |
           gh pr comment $PR --body "$TEMPLATE"
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.HYOK_PAT }}
           PR: ${{ github.event.pull_request.html_url }}
           TEMPLATE: ${{ env.TEMPLATE }}
