--- a/.github/workflows/node12-test.yml
+++ b/.github/workflows/node12-test.yml
@@ -1,4 +1,4 @@
-name: 066 Node12 deprecation
+name: Ubuntu
 
 on:
   workflow_dispatch:
@@ -8,15 +8,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2.3.1
+      - run: cat /etc/issue
+      - run: unane -a
 
 
   cibtauber:
     runs-on: ubuntu-latest
     container:
-      image: ubuntu:20.04
-      options: --user root
+      image: ubuntu:22.04
+      options: --user root --cpus=1
 
     steps:
-      - uses: actions/checkout@v2.3.1
+      - run: uname -a
+      
 
