--- a/.github/workflows/buildx.yaml
+++ b/.github/workflows/buildx.yaml
@@ -9,7 +9,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: docker pull
         run: |
           docker pull moby/buildkit:buildx-statble-1
 
